--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -22,3 +22,6 @@ settings_jsp.button.update = Update
 settings_jsp.label.first_name = First name
 settings_jsp.label.last_name = Last name
 settings_jsp.label.localization = Localization
+
+login_jsp.label.registration = Register
+
