--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -22,3 +22,6 @@ settings_jsp.button.update = \u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C
 settings_jsp.label.first_name = \u0418\u043C\u044F
 settings_jsp.label.last_name = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
 settings_jsp.label.localization = \u041B\u043E\u043A\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F
+
+login_jsp.label.registration = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
+
