--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -24,4 +24,5 @@ settings_jsp.label.last_name = Last name
 settings_jsp.label.localization = Localization
 
 login_jsp.label.registration = Register
+user-cabinet_jsp.label.replenish = Replenish
 
