--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -25,3 +25,4 @@ settings_jsp.label.localization = \u041B\u043E\u043A\u0430\u043B\u0438\u0437\u04
 
 login_jsp.label.registration = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
 
+user-cabinet_jsp.label.replenish = \u041f\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u044c
