--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -26,3 +26,10 @@ settings_jsp.label.localization = Localization
 login_jsp.label.registration = Register
 user-cabinet_jsp.label.replenish = Replenish
 
+admin-cabinet_jsp.label.id = id
+admin-cabinet_jsp.label.login = Login
+admin-cabinet_jsp.label.first_name = First name
+admin-cabinet_jsp.label.last_name = Last name
+admin-cabinet_jsp.label.blocked = Blocked
+
+
