--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -31,5 +31,6 @@ admin-cabinet_jsp.label.login = Login
 admin-cabinet_jsp.label.first_name = First name
 admin-cabinet_jsp.label.last_name = Last name
 admin-cabinet_jsp.label.blocked = Blocked
+admin-cabinet_jsp.button.change_blocked = change blocked
 
 
