--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -32,3 +32,4 @@ admin-cabinet_jsp.label.login = \u041b\u043e\u0433\u0438\u043d
 admin-cabinet_jsp.label.first_name = \u0418\u043c\u044f
 admin-cabinet_jsp.label.last_name = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
 admin-cabinet_jsp.label.blocked = \u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d
+admin-cabinet_jsp.button.change_blocked = \u0438\u0437\u043c\u0435\u043d\u0438\u0442\u044c\u0020\u0431\u043b\u043e\u043a
