--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -26,11 +26,16 @@ settings_jsp.label.localization = Localization
 login_jsp.label.registration = Register
 user-cabinet_jsp.label.replenish = Replenish
 
-admin-cabinet_jsp.label.id = id
-admin-cabinet_jsp.label.login = Login
-admin-cabinet_jsp.label.first_name = First name
-admin-cabinet_jsp.label.last_name = Last name
-admin-cabinet_jsp.label.blocked = Blocked
-admin-cabinet_jsp.button.change_blocked = change blocked
+admin-cabinet_jsp.label.user.login = Login
+admin-cabinet_jsp.label.user.first_name = First name
+admin-cabinet_jsp.label.user.last_name = Last name
+admin-cabinet_jsp.label.user.blocked = Blocked
+admin-cabinet_jsp.button.user.change_blocked = change blocked
+
+admin-cabinet_jsp.label.magazine.name = Name
+admin-cabinet_jsp.label.magazine.price = Price
+admin-cabinet_jsp.label.magazine.image = Image
+admin-cabinet_jsp.button.magazine.change = Change
+
 
 
