--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -27,9 +27,13 @@ login_jsp.label.registration = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\
 
 user-cabinet_jsp.label.replenish = \u041f\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u044c
 
-admin-cabinet_jsp.label.id = \u0418\u0434\u0435\u043d\u0442\u0438\u0444\u0438\u043a\u0430\u0442\u043e\u0440
-admin-cabinet_jsp.label.login = \u041b\u043e\u0433\u0438\u043d
-admin-cabinet_jsp.label.first_name = \u0418\u043c\u044f
-admin-cabinet_jsp.label.last_name = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
-admin-cabinet_jsp.label.blocked = \u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d
-admin-cabinet_jsp.button.change_blocked = \u0438\u0437\u043c\u0435\u043d\u0438\u0442\u044c\u0020\u0431\u043b\u043e\u043a
+admin-cabinet_jsp.label.user.login = \u041b\u043e\u0433\u0438\u043d
+admin-cabinet_jsp.label.user.first_name = \u0418\u043c\u044f
+admin-cabinet_jsp.label.user.last_name = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
+admin-cabinet_jsp.label.user.blocked = \u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d
+admin-cabinet_jsp.button.user.change_blocked = \u0438\u0437\u043c\u0435\u043d\u0438\u0442\u044c\u0020\u0431\u043b\u043e\u043a
+
+admin-cabinet_jsp.label.magazine.name = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
+admin-cabinet_jsp.label.magazine.price = \u0426\u0435\u043d\u0430
+admin-cabinet_jsp.label.magazine.image = \u0418\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u0435
+admin-cabinet_jsp.button.magazine.change = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
