Admin cabinet delete

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -36,6 +36,7 @@ admin-cabinet_jsp.label.magazine.name = Name
 admin-cabinet_jsp.label.magazine.price = Price
 admin-cabinet_jsp.label.magazine.image = Image
 admin-cabinet_jsp.button.magazine.change = Change
+admin-cabinet_jsp.button.magazine.delete = Delete
 
 
 
