--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -37,3 +37,4 @@ admin-cabinet_jsp.label.magazine.name = \u041d\u0430\u0437\u0432\u0430\u043d\u04
 admin-cabinet_jsp.label.magazine.price = \u0426\u0435\u043d\u0430
 admin-cabinet_jsp.label.magazine.image = \u0418\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u0435
 admin-cabinet_jsp.button.magazine.change = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
+admin-cabinet_jsp.button.magazine.delete = \u0423\u0434\u0430\u043b\u0438\u0442\u044c
