Admin cabinet add magazine

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -35,8 +35,11 @@ admin-cabinet_jsp.button.user.change_blocked = change blocked
 admin-cabinet_jsp.label.magazine.name = Name
 admin-cabinet_jsp.label.magazine.price = Price
 admin-cabinet_jsp.label.magazine.image = Image
+admin-cabinet_jsp.label.magazine.themeId = Theme id
 admin-cabinet_jsp.button.magazine.change = Change
 admin-cabinet_jsp.button.magazine.delete = Delete
+admin-cabinet_jsp.label.magazine.add = Add magazine
+admin-cabinet_jsp.button.magazine.add = Add
 
 
 
