--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -41,5 +41,13 @@ admin-cabinet_jsp.button.magazine.delete = Delete
 admin-cabinet_jsp.label.magazine.add = Add magazine
 admin-cabinet_jsp.button.magazine.add = Add
 
+index_jsp.label.sort.name_asc = Sort by name ascending
+index_jsp.label.sort.name_desc = Sort by name descending
+index_jsp.label.sort.price_asc = Sort by price ascending
+index_jsp.label.sort.price_desc = Sort by price descending
+index_jsp.label.sort.all_wo_sorting = All magazines without sorting
+
+index_jsp.label.filter.all_wo_filter = All magazines without filtering
+
 
 
