Paging with new url generator in progress

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -48,6 +48,10 @@ index_jsp.label.sort.price_desc = Sort by price descending
 index_jsp.label.sort.all_wo_sorting = All magazines without sorting
 
 index_jsp.label.filter.all_wo_filter = All magazines without filtering
+index_jsp.label.filter.interior = Interior
+index_jsp.label.filter.sport = Sport
+index_jsp.label.filter.it_world = IT World
+index_jsp.label.filter.music = Music
 
 
 
