--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -45,9 +45,9 @@ index_jsp.label.sort.name_asc = Sort by name ascending
 index_jsp.label.sort.name_desc = Sort by name descending
 index_jsp.label.sort.price_asc = Sort by price ascending
 index_jsp.label.sort.price_desc = Sort by price descending
-index_jsp.label.sort.all_wo_sorting = All magazines without sorting
+index_jsp.label.sort.all_wo_sorting = Without sorting
 
-index_jsp.label.filter.all_wo_filter = All magazines without filtering
+index_jsp.label.filter.all_wo_filter = Without filtering
 index_jsp.label.filter.interior = Interior
 index_jsp.label.filter.sport = Sport
 index_jsp.label.filter.it_world = IT World
