Subscription from index with filter, sort and pagination preserved

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -53,5 +53,7 @@ index_jsp.label.filter.sport = Sport
 index_jsp.label.filter.it_world = IT World
 index_jsp.label.filter.music = Music
 
+index_jsp.button.reset_checked = Reset checked magazines
+
 
 
