Exception each layer, Serialization, Registration + front, Settings + front, links, home, Localization switch in settings

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -1,4 +1,4 @@
-
+header_jspf.anchor.home = Home
 header_jspf.anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
 header_jspf.anchor.logout     = Logout
