--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -1,3 +1,4 @@
+header_jspf.anchor.home = \u0414\u043e\u043c\u043e\u0439
 
 header_jspf.anchor.all_orders = \u0417\u0430\u043A\u0430\u0437\u044B
 header_jspf.anchor.login      = \u0412\u043E\u0439\u0442\u0438
