--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -22,6 +22,7 @@ settings_jsp.button.update = Update
 settings_jsp.label.first_name = First name
 settings_jsp.label.last_name = Last name
 settings_jsp.label.localization = Localization
+settings_jsp.label.default = [Default]
 
 login_jsp.label.registration = Register
 user-cabinet_jsp.label.replenish = Replenish
