Logout, settings, error page

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -47,14 +47,18 @@ index_jsp.label.sort.name_desc = Sort by name descending
 index_jsp.label.sort.price_asc = Sort by price ascending
 index_jsp.label.sort.price_desc = Sort by price descending
 index_jsp.label.sort.all_wo_sorting = Without sorting
-
 index_jsp.label.filter.all_wo_filter = Without filtering
 index_jsp.label.filter.interior = Interior
 index_jsp.label.filter.sport = Sport
 index_jsp.label.filter.it_world = IT World
 index_jsp.label.filter.music = Music
-
 index_jsp.button.reset_checked = Reset checked magazines
+index_jsp.label.language.russian = Russian
+index_jsp.label.language.english = English
+index_jsp.label.choose = Choose your language
 
+settings_jsp.label.choose = Choose your language
+settings_jsp.label.language.russian = Russian
+settings_jsp.label.language.english = English
 
 
