--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -50,11 +50,16 @@ index_jsp.label.sort.name_desc = \u0421\u043e\u0440\u0442\u0438\u0440\u043e\u043
 index_jsp.label.sort.price_asc = \u0421\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0020\u043f\u043e\u0020\u0446\u0435\u043d\u0435\u0020\u043f\u043e\u0020\u0432\u043e\u0437\u0440\u0430\u0441\u0442\u0430\u043d\u0438\u044e
 index_jsp.label.sort.price_desc = \u0421\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0020\u043f\u043e\u0020\u0446\u0435\u043d\u0435\u0020\u043f\u043e\u0020\u0443\u0431\u044b\u0432\u0430\u043d\u0438\u044e
 index_jsp.label.sort.all_wo_sorting = \u0411\u0435\u0437\u0020\u0441\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u043a\u0438
-
 index_jsp.label.filter.all_wo_filter = \u0411\u0435\u0437\u0020\u0444\u0438\u043b\u044c\u0442\u0440\u0430\u0446\u0438\u0438
 index_jsp.label.filter.interior = \u0418\u043d\u0442\u0435\u0440\u044c\u0435\u0440
 index_jsp.label.filter.sport = \u0421\u043f\u043e\u0440\u0442
 index_jsp.label.filter.it_world = \u041c\u0438\u0440\u0020\u0410\u0439\u0422\u0438
 index_jsp.label.filter.music = \u041c\u0443\u0437\u044b\u043a\u0430
-
 index_jsp.button.reset_checked = \u0421\u0431\u0440\u043e\u0441\u0438\u0442\u044c\u0020\u0432\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0435\u0020\u0436\u0443\u0440\u043d\u0430\u043b\u044b
+index_jsp.label.language.russian = \u0420\u0443\u0441\u0441\u043a\u0438\u0439
+index_jsp.label.language.english = \u0410\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439
+index_jsp.label.choose = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0412\u0430\u0448\u0020\u044f\u0437\u044b\u043a
+
+settings_jsp.label.choose = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0412\u0430\u0448\u0020\u044f\u0437\u044b\u043a
+settings_jsp.label.language.russian = \u0420\u0443\u0441\u0441\u043a\u0438\u0439
+settings_jsp.label.language.english = \u0410\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439
