-blocked user cant login -validate LoginCheckCommand -Login errors -blocked user errors -admin cabinet only clients -Admin header -admin cabinet save -admin cabinet new tables -url_clean and url_command

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -37,7 +37,7 @@ admin-cabinet_jsp.label.magazine.name = Name
 admin-cabinet_jsp.label.magazine.price = Price
 admin-cabinet_jsp.label.magazine.image = Image
 admin-cabinet_jsp.label.magazine.themeId = Theme id
-admin-cabinet_jsp.button.magazine.change = Change
+admin-cabinet_jsp.button.magazine.save = Save
 admin-cabinet_jsp.button.magazine.delete = Delete
 admin-cabinet_jsp.label.magazine.add = Add magazine
 admin-cabinet_jsp.button.magazine.add = Add
@@ -60,5 +60,7 @@ index_jsp.label.choose = Choose your language
 settings_jsp.label.choose = Choose your language
 settings_jsp.label.language.russian = Russian
 settings_jsp.label.language.english = English
+login_jsp.label.error_logpass = Login or Password cannot be empty
+login_jsp.label.error_blocked = Sorry, your account is blocked
 
 
