--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -39,7 +39,7 @@ admin-cabinet_jsp.label.magazine.name = \u041d\u0430\u0437\u0432\u0430\u043d\u04
 admin-cabinet_jsp.label.magazine.price = \u0426\u0435\u043d\u0430
 admin-cabinet_jsp.label.magazine.image = \u0418\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u0435
 admin-cabinet_jsp.label.magazine.themeId = \u0422\u0435\u043c\u0430
-admin-cabinet_jsp.button.magazine.change = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
+admin-cabinet_jsp.button.magazine.save = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
 admin-cabinet_jsp.button.magazine.delete = \u0423\u0434\u0430\u043b\u0438\u0442\u044c
 admin-cabinet_jsp.label.magazine.add = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c\u0020\u043c\u0430\u0433\u0430\u0437\u0438\u043d
 admin-cabinet_jsp.button.magazine.add = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
@@ -63,3 +63,5 @@ index_jsp.label.choose = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\
 settings_jsp.label.choose = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0412\u0430\u0448\u0020\u044f\u0437\u044b\u043a
 settings_jsp.label.language.russian = \u0420\u0443\u0441\u0441\u043a\u0438\u0439
 settings_jsp.label.language.english = \u0410\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439
+login_jsp.label.error_logpass = \u041b\u043e\u0433\u0438\u043d\u0020\u0438\u043b\u0438\u0020\u043f\u0430\u0440\u043e\u043b\u044c\u0020\u043d\u0435\u0020\u043c\u043e\u0433\u0443\u0442\u0020\u0431\u044b\u0442\u044c\u0020\u043f\u0443\u0441\u0442\u044b\u043c\u0438
+login_jsp.label.error_blocked = \u0418\u0437\u0432\u0438\u043d\u0438\u0442\u0435\u002c\u0020\u0412\u0430\u0448\u0020\u0430\u043a\u043a\u0430\u0443\u043d\u0442\u0020\u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d
