-default locale -admin cab new headers -registration localization -webinf

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -41,6 +41,8 @@ admin-cabinet_jsp.button.magazine.save = Save
 admin-cabinet_jsp.button.magazine.delete = Delete
 admin-cabinet_jsp.label.magazine.add = Add magazine
 admin-cabinet_jsp.button.magazine.add = Add
+admin-cabinet_jsp.label.user.block = Block/unblock client
+admin-cabinet_jsp.label.magazine.edit = Edit magazines
 
 index_jsp.label.sort.name_asc = Sort by name ascending
 index_jsp.label.sort.name_desc = Sort by name descending
