--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -41,8 +41,10 @@ admin-cabinet_jsp.label.magazine.image = \u0418\u0437\u043e\u0431\u0440\u0430\u0
 admin-cabinet_jsp.label.magazine.themeId = \u0422\u0435\u043c\u0430
 admin-cabinet_jsp.button.magazine.save = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
 admin-cabinet_jsp.button.magazine.delete = \u0423\u0434\u0430\u043b\u0438\u0442\u044c
-admin-cabinet_jsp.label.magazine.add = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c\u0020\u043c\u0430\u0433\u0430\u0437\u0438\u043d
+admin-cabinet_jsp.label.magazine.add = \u0414\u043e\u0431\u0430\u0432\u043b\u0435\u043d\u0438\u0435\u0020\u0436\u0443\u0440\u043d\u0430\u043b\u043e\u0432
 admin-cabinet_jsp.button.magazine.add = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
+admin-cabinet_jsp.label.user.block = \u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0430\u0020\u0440\u0430\u0437\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0430\u0020\u043a\u043b\u0438\u0435\u043d\u0442\u0430
+admin-cabinet_jsp.label.magazine.edit = \u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435\u0020\u0436\u0443\u0440\u043d\u0430\u043b\u043e\u0432
 
 
 index_jsp.label.sort.name_asc = \u0421\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0020\u043f\u043e\u0020\u0438\u043c\u0435\u043d\u0438\u0020\u043f\u043e\u0020\u0432\u043e\u0437\u0440\u0430\u0441\u0442\u0430\u043d\u0438\u044e
