- resources index - resources user-cabinet

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -1,18 +1,7 @@
 header_jspf.anchor.home = Home
-header_jspf.anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
 header_jspf.anchor.logout     = Logout
-header_jspf.anchor.menu       = Menu
 header_jspf.anchor.settings   = Settings
-
-list_menu_jsp.button.make_an_order = Make an order
-list_menu_jsp.table.header.name    = Name
-list_menu_jsp.table.header.order   = Order
-list_menu_jsp.table.header.price   = Price
-
-list_orders_jsp.table.header.bill = Bill
-list_orders_jsp.table.header.client = Client
-list_orders_jsp.table.header.status = Status
 
 login_jsp.button.login = Login
 login_jsp.label.login  = Login
@@ -22,17 +11,20 @@ settings_jsp.button.update = Update
 settings_jsp.label.first_name = First name
 settings_jsp.label.last_name = Last name
 settings_jsp.label.localization = Localization
-settings_jsp.label.default = [Default]
 
 login_jsp.label.registration = Register
 user-cabinet_jsp.label.replenish = Replenish
+user-cabinet_jsp.p.your_subscription = here is your subscriptions:
+user-cabinet_jsp.div.no_subscription = no subscription yet
+user-cabinet_jsp.p.hello = Hello,
+user-cabinet_jsp.p.your_balance = your balance is:
+
 
 admin-cabinet_jsp.label.user.login = Login
 admin-cabinet_jsp.label.user.first_name = First name
 admin-cabinet_jsp.label.user.last_name = Last name
 admin-cabinet_jsp.label.user.blocked = Blocked
 admin-cabinet_jsp.button.user.change_blocked = change blocked
-
 admin-cabinet_jsp.label.magazine.name = Name
 admin-cabinet_jsp.label.magazine.price = Price
 admin-cabinet_jsp.label.magazine.image = Image
@@ -58,10 +50,20 @@ index_jsp.button.reset_checked = Reset checked magazines
 index_jsp.label.language.russian = Russian
 index_jsp.label.language.english = English
 index_jsp.label.choose = Choose your language
+index_jsp.button.buy_subscription = Buy subscription to selected magazines
+index_jsp.p.inspiring_text = Here you can find some interesting stuff to read, so don't hesitate subscribe to few magazines and you'll like it.Spend some time with new knowledge sweet as cake, healthy as apple.
+index_jsp.h3.login_to_subscribe = LOGIN TO SUBSCRIBE
+index_jsp.h3.replenish_to_subscribe = REPLENISH YOUR AT YOUR PERSONAL BALANCE TO BUY SUBSCRIPTION
+index_jsp.h1.periodicals_subscription = Periodicals subscription
+index_jsp.h3.sport = Sport
+index_jsp.h3.it = IT World
+index_jsp.h3.music = Music
+index_jsp.h3.interior = Interior
 
 settings_jsp.label.choose = Choose your language
 settings_jsp.label.language.russian = Russian
 settings_jsp.label.language.english = English
+
 login_jsp.label.error_logpass = Login or Password cannot be empty
 login_jsp.label.error_blocked = Sorry, your account is blocked
 
