--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -1,19 +1,8 @@
-header_jspf.anchor.home = \u0414\u043e\u043c\u043e\u0439
+header_jspf.anchor.home = \u0413\u043b\u0430\u0432\u043d\u0430\u044f
 
-header_jspf.anchor.all_orders = \u0417\u0430\u043A\u0430\u0437\u044B
 header_jspf.anchor.login      = \u0412\u043E\u0439\u0442\u0438
 header_jspf.anchor.logout     = \u0412\u044B\u0439\u0442\u0438
-header_jspf.anchor.menu       = \u041C\u0435\u043D\u044E
 header_jspf.anchor.settings   = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
-
-list_menu_jsp.button.make_an_order = \u0421\u0434\u0435\u043B\u0430\u0442\u044C \u0437\u0430\u043A\u0430\u0437
-list_menu_jsp.table.header.name    = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
-list_menu_jsp.table.header.order   = \u0417\u0430\u043A\u0430\u0437\u0430\u0442\u044C
-list_menu_jsp.table.header.price   = \u0426\u0435\u043D\u0430
-
-list_orders_jsp.table.header.bill = \u0421\u0447\u0435\u0442
-list_orders_jsp.table.header.client = \u041A\u043B\u0438\u0435\u043D\u0442
-list_orders_jsp.table.header.status = \u0421\u0442\u0430\u0442\u0443\u0441
 
 login_jsp.button.login = \u0412\u043E\u0439\u0442\u0438
 login_jsp.label.login  = \u041B\u043E\u0433\u0438\u043D
@@ -23,11 +12,14 @@ settings_jsp.button.update = \u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C
 settings_jsp.label.first_name = \u0418\u043C\u044F
 settings_jsp.label.last_name = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
 settings_jsp.label.localization = \u041B\u043E\u043A\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F
-settings_jsp.label.default = \u005b\u041f\u043e\u0020\u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e\u005d
 
 login_jsp.label.registration = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
 
 user-cabinet_jsp.label.replenish = \u041f\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u044c
+user-cabinet_jsp.p.your_subscription = \u0412\u0430\u0448\u0438\u0020\u043f\u043e\u0434\u043f\u0438\u0441\u043a\u0438\u003a
+user-cabinet_jsp.div.no_subscription = \u0443\u0020\u0412\u0430\u0441\u0020\u043f\u043e\u043a\u0430\u0020\u043d\u0435\u0442\u0020\u043f\u043e\u0434\u043f\u0438\u0441\u043e\u043a
+user-cabinet_jsp.p.hello = \u041f\u0440\u0438\u0432\u0435\u0442\u002c
+user-cabinet_jsp.p.your_balance = \u0412\u0430\u0448\u0020\u0431\u0430\u043b\u0430\u043d\u0441\u0020\u0441\u043e\u0441\u0442\u0430\u0432\u043b\u044f\u0435\u0442\u003a\u0020
 
 admin-cabinet_jsp.label.user.login = \u041b\u043e\u0433\u0438\u043d
 admin-cabinet_jsp.label.user.first_name = \u0418\u043c\u044f
@@ -61,6 +53,16 @@ index_jsp.button.reset_checked = \u0421\u0431\u0440\u043e\u0441\u0438\u0442\u044
 index_jsp.label.language.russian = \u0420\u0443\u0441\u0441\u043a\u0438\u0439
 index_jsp.label.language.english = \u0410\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439
 index_jsp.label.choose = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0412\u0430\u0448\u0020\u044f\u0437\u044b\u043a
+index_jsp.button.buy_subscription = \u041a\u0443\u043f\u0438\u0442\u044c\u0020\u043f\u043e\u0434\u043f\u0438\u0441\u043a\u0443\u0020\u043d\u0430\u0020\u0432\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0435\u0020\u0436\u0443\u0440\u043d\u0430\u043b\u044b
+index_jsp.p.inspiring_text = \u0417\u0434\u0435\u0441\u044c\u0020\u0432\u044b\u0020\u043c\u043e\u0436\u0435\u0442\u0435\u0020\u043d\u0430\u0439\u0442\u0438\u0020\u043a\u043e\u0435\u002d\u0447\u0442\u043e\u0020\u0438\u043d\u0442\u0435\u0440\u0435\u0441\u043d\u043e\u0435\u0020\u0434\u043b\u044f\u0020\u0447\u0442\u0435\u043d\u0438\u044f\u002c\u0020\u043d\u0435\u0020\u0441\u0442\u0435\u0441\u043d\u044f\u0439\u0442\u0435\u0441\u044c\u0020\u043f\u043e\u0434\u043f\u0438\u0441\u044b\u0432\u0430\u0439\u0442\u0435\u0441\u044c\u0020\u043d\u0430\u0020\u043f\u0430\u0440\u0443\u0020\u0436\u0443\u0440\u043d\u0430\u043b\u043e\u0432\u002c\u0020\u0438\u0020\u0432\u0430\u043c\u0020\u043f\u043e\u043d\u0440\u0430\u0432\u0438\u0442\u0441\u044f\u002e\u0020\u041f\u0440\u043e\u043f\u0440\u043e\u0431\u0443\u0439\u0442\u0435\u0020\u043d\u043e\u0432\u044b\u0435\u0020\u0437\u043d\u0430\u043d\u0438\u044f\u002c\u0020\u0441\u043b\u0430\u0434\u043a\u0435\u0020\u043a\u0430\u043a\u0020\u043f\u0438\u0440\u043e\u0436\u043d\u044b\u0435\u002c\u0020\u043f\u043e\u043b\u0435\u0437\u043d\u044b\u0435\u0020\u043a\u0430\u043a\u0020\u044f\u0431\u043b\u043e\u043a\u0438\u002e
+index_jsp.h3.login_to_subscribe = \u0417\u0410\u041b\u041e\u0413\u0418\u041d\u0422\u0415\u0421\u042c\u002c\u0020\u0427\u0422\u041e\u0020\u0411\u042b\u0020\u041f\u041e\u0414\u041f\u0418\u0421\u0410\u0422\u042c\u0421\u042f
+index_jsp.h3.replenish_to_subscribe = \u041f\u041e\u041f\u041e\u041b\u041d\u0418\u0422\u0415\u0020\u0411\u0410\u041b\u0410\u041d\u0421\u0020\u0412\u0020\u041b\u0418\u0427\u041d\u041e\u041c\u0020\u041a\u0410\u0411\u0418\u041d\u0415\u0422\u0415\u002c\u0020\u0427\u0422\u041e\u0020\u0411\u042b\u0020\u041a\u0423\u041f\u0418\u0422\u042c\u0020\u041f\u041e\u0414\u041f\u0418\u0421\u041a\u0423
+index_jsp.h1.periodicals_subscription = \u041f\u0435\u0440\u0438\u043e\u0434\u0438\u0447\u0435\u0441\u043a\u0438\u0435\u0020\u0438\u0437\u0434\u0430\u043d\u0438\u044f
+index_jsp.h3.sport = \u0421\u043f\u043e\u0440\u0442
+index_jsp.h3.it = \u041c\u0438\u0440\u0020\u0410\u0439\u0422\u0438
+index_jsp.h3.music = \u041c\u0443\u0437\u044b\u043a\u0430
+index_jsp.h3.interior = \u0418\u043d\u0442\u0435\u0440\u044c\u0435\u0440
+
 
 settings_jsp.label.choose = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0412\u0430\u0448\u0020\u044f\u0437\u044b\u043a
 settings_jsp.label.language.russian = \u0420\u0443\u0441\u0441\u043a\u0438\u0439
