--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -19,6 +19,7 @@ user-cabinet_jsp.div.no_subscription = no subscription yet
 user-cabinet_jsp.p.hello = Hello,
 user-cabinet_jsp.p.your_balance = your balance is:
 
+registration_jsp.error.error_reg = All fields required
 
 admin-cabinet_jsp.label.user.login = Login
 admin-cabinet_jsp.label.user.first_name = First name
