--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -21,6 +21,8 @@ user-cabinet_jsp.div.no_subscription = \u0443\u0020\u0412\u0430\u0441\u0020\u043
 user-cabinet_jsp.p.hello = \u041f\u0440\u0438\u0432\u0435\u0442\u002c
 user-cabinet_jsp.p.your_balance = \u0412\u0430\u0448\u0020\u0431\u0430\u043b\u0430\u043d\u0441\u0020\u0441\u043e\u0441\u0442\u0430\u0432\u043b\u044f\u0435\u0442\u003a\u0020
 
+registration_jsp.error.error_reg = \u0412\u0441\u0435\u0020\u043f\u043e\u043b\u044f\u0020\u043e\u0431\u044f\u0437\u0430\u0442\u0435\u043b\u044c\u043d\u044b\u0020\u0434\u043b\u044f\u0020\u0437\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u044f
+
 admin-cabinet_jsp.label.user.login = \u041b\u043e\u0433\u0438\u043d
 admin-cabinet_jsp.label.user.first_name = \u0418\u043c\u044f
 admin-cabinet_jsp.label.user.last_name = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
