--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -13,11 +13,12 @@ settings_jsp.label.last_name = Last name
 settings_jsp.label.localization = Localization
 
 login_jsp.label.registration = Register
-user-cabinet_jsp.label.replenish = Replenish
-user-cabinet_jsp.p.your_subscription = here is your subscriptions:
-user-cabinet_jsp.div.no_subscription = no subscription yet
-user-cabinet_jsp.p.hello = Hello,
-user-cabinet_jsp.p.your_balance = your balance is:
+client-cabinet_jsp.label.replenish = Replenish
+client-cabinet_jsp.p.your_subscription = here is your subscriptions:
+client-cabinet_jsp.div.no_subscription = no subscription yet
+client-cabinet_jsp.p.hello = Hello,
+client-cabinet_jsp.p.your_balance = your balance is:
+client-cabinet_jsp.a.back_with_pre_params = you can get back where you leave previous
 
 registration_jsp.error.error_reg = All fields required
 
