Search with sort, filter, page

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -64,6 +64,7 @@ index_jsp.h3.it = IT World
 index_jsp.h3.music = Music
 index_jsp.h3.interior = Interior
 index_jsp.input.search = Search
+index_jsp.label.no_magazines = No magazines in your selection
 
 settings_jsp.label.choose = Choose your language
 settings_jsp.label.language.russian = Russian
