--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -22,7 +22,7 @@ client-cabinet_jsp.a.back_with_pre_params = you can get back where you leave pre
 
 registration_jsp.error.error_reg = All fields required
 registration_jsp.error.error_symbols = Not valid symbols in Login/First name/Last name field(-s)<br/> (only alphabet, digits, with hyphens, underscores and spaces as internal separators)
-registration_jsp.error.error_taken_login = \u0418\u0437\u0432\u0438\u043d\u0438\u0442\u0435\u0020\u0434\u0430\u043d\u043d\u044b\u0439\u0020\u043b\u043e\u0433\u0438\u043d\u0020\u0443\u0436\u0435\u0020\u0437\u0430\u043d\u044f\u0442
+registration_jsp.error.error_taken_login = Sorry, this login already taken.
 
 admin-cabinet_jsp.label.user.login = Login
 admin-cabinet_jsp.label.user.first_name = First name
