--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -19,6 +19,7 @@ client-cabinet_jsp.div.no_subscription = no subscription yet
 client-cabinet_jsp.p.hello = Hello,
 client-cabinet_jsp.p.your_balance = your balance is:
 client-cabinet_jsp.a.back_with_pre_params = you can get back where you leave previous
+client-cabinet_jsp.div.not_enough_money_for_subscription = You dont have enough money for buying selected subscription(-s), replenish
 
 registration_jsp.error.error_reg = All fields required
 registration_jsp.error.error_symbols = Not valid symbols in Login/First name/Last name field(-s)<br/> (only alphabet, digits, with hyphens, underscores and spaces as internal separators)
